ch7-ingress/labs/lab01/todo-list-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    # rewrite-target 어노테이션은 그대로 유지합니다.
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # defaultBackend를 추가합니다.
  # 어떤 규칙과도 맞지 않는 요청이 들어올 경우, 기본적으로 hello-service로 보냅니다.
  # 이렇게 하면 '정문 주소'로만 접속해도 404 대신 페이지가 보입니다.
  defaultBackend:
    service:
      name: backend-service
      port:
        number: 8080
  rules:
    - http:
        paths:
          # 경로 끝에 '/'를 추가하여 더 명확하게 만듭니다.
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
